// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationView should display a confirmation screen for a SETTINGS_CHANGE transaction 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 container css-zpxm0u-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-14yu9oo-MuiTypography-root"
    >
      <mock-icon
        aria-hidden=""
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hr8a3z-MuiSvgIcon-root"
        focusable="false"
      />
      New signer
    </p>
    <div
      class="container"
    >
      <div
        class="avatarContainer"
        style="width: 32px; height: 32px;"
      >
        <div
          class="icon"
          style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMzI1IDQ4JSAyMiUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgyNDAgOTklIDQ5JSkiIGQ9Ik0xLDBoMXYxaC0xek02LDBoMXYxaC0xek0yLDBoMXYxaC0xek01LDBoMXYxaC0xek0zLDBoMXYxaC0xek00LDBoMXYxaC0xek0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0wLDJoMXYxaC0xek03LDJoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0yLDJoMXYxaC0xek01LDJoMXYxaC0xek0xLDNoMXYxaC0xek02LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0xLDVoMXYxaC0xek02LDVoMXYxaC0xek0yLDVoMXYxaC0xek01LDVoMXYxaC0xek0yLDdoMXYxaC0xek01LDdoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCgxNTUgOTUlIDU5JSkiIGQ9Ik0xLDFoMXYxaC0xek02LDFoMXYxaC0xek0zLDFoMXYxaC0xek00LDFoMXYxaC0xek0zLDJoMXYxaC0xek00LDJoMXYxaC0xek0xLDdoMXYxaC0xek02LDdoMXYxaC0xeiIvPjwvc3ZnPg==); width: 32px; height: 32px;"
        />
      </div>
      <div
        class="MuiBox-root css-1lchl8k"
      >
        <div
          class="MuiBox-root css-171onha"
          title="Nevinha"
        >
          <div
            class="MuiBox-root css-1o4wo1x"
          >
            Nevinha
          </div>
        </div>
        <div
          class="addressContainer"
        >
          <div
            class="MuiBox-root css-b5p5gz"
          >
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <span>
                0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045
              </span>
            </span>
          </div>
          <span
            aria-label="Copy to clipboard"
            class=""
            data-mui-internal-clone-element="true"
            style="cursor: pointer;"
          >
            <button
              aria-label="Copy to clipboard"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <mock-icon
                aria-hidden=""
                class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                data-testid="copy-btn-icon"
                focusable="false"
              />
            </button>
          </span>
          <div
            class="MuiBox-root css-yjghm1"
          />
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1facvfi-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-0"
  >
    <p
      class="MuiTypography-root MuiTypography-body2 css-17vdyq3-MuiTypography-root"
    >
      Any transaction requires the confirmation of:
    </p>
    <p
      class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
    >
      <b>
        1
      </b>
       out of
       
      <b>
        1
         signer
      </b>
    </p>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1facvfi-MuiDivider-root"
  />
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1gdgqta-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none;"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-10sjung-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="decoded-tx-summary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-1r0e0ir-MuiAccordionSummary-content"
            >
              Advanced details
              <span
                class=""
                data-mui-internal-clone-element="true"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-17ibv3e-MuiSvgIcon-root"
                  focusable="false"
                />
              </span>
              <div
                class="MuiBox-root css-i9gxme"
              />
              addOwnerWithThreshold
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-w74p4c-MuiAccordionDetails-root"
                  data-testid="decoded-tx-details"
                >
                  <div
                    class="MuiStack-root css-1sazv7p-MuiStack-root"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1 css-13ch7tx-MuiTypography-root"
                    >
                      Call
                      <code
                        class="MuiTypography-root MuiTypography-body2 css-1vdua93-MuiTypography-root"
                      >
                        addOwnerWithThreshold
                      </code>
                       
                      on
                      <div
                        class="container"
                      >
                        <div
                          class="avatarContainer"
                          style="width: 24px; height: 24px;"
                        >
                          <div
                            class="icon"
                            style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMjE4IDk2JSA0OSUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgzMDQgNTclIDEzJSkiIGQ9Ik0xLDBoMXYxaC0xek02LDBoMXYxaC0xek0zLDBoMXYxaC0xek00LDBoMXYxaC0xek0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0yLDFoMXYxaC0xek01LDFoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0yLDNoMXYxaC0xek01LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0yLDRoMXYxaC0xek01LDRoMXYxaC0xek0zLDRoMXYxaC0xek00LDRoMXYxaC0xek0wLDVoMXYxaC0xek03LDVoMXYxaC0xek0zLDVoMXYxaC0xek00LDVoMXYxaC0xek0xLDZoMXYxaC0xek02LDZoMXYxaC0xek0zLDZoMXYxaC0xek00LDZoMXYxaC0xek0xLDdoMXYxaC0xek02LDdoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCgyNjMgODQlIDQyJSkiIGQ9Ik0zLDNoMXYxaC0xek00LDNoMXYxaC0xek0wLDRoMXYxaC0xek03LDRoMXYxaC0xek0xLDVoMXYxaC0xek02LDVoMXYxaC0xeiIvPjwvc3ZnPg==); width: 24px; height: 24px;"
                          />
                        </div>
                        <div
                          class="inline MuiBox-root css-1lchl8k"
                        >
                          <div
                            class="addressContainer inline"
                          >
                            <div
                              class="MuiBox-root css-b5p5gz"
                            >
                              <span
                                aria-label="Copy to clipboard"
                                class=""
                                data-mui-internal-clone-element="true"
                                style="cursor: pointer;"
                              >
                                <span>
                                  0xDa5e...EE6b
                                </span>
                              </span>
                            </div>
                            <span
                              aria-label="Copy to clipboard"
                              class=""
                              data-mui-internal-clone-element="true"
                              style="cursor: pointer;"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                tabindex="0"
                                type="button"
                              >
                                <mock-icon
                                  aria-hidden=""
                                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                  data-testid="copy-btn-icon"
                                  focusable="false"
                                />
                              </button>
                            </span>
                            <div
                              class="MuiBox-root css-yjghm1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root css-kz5wc9"
                    />
                    <div
                      class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                        data-testid="tx-row-title"
                        style="word-break: break-word;"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                        >
                          Value:
                        </p>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                        data-testid="tx-data-row"
                      >
                        <div
                          class="MuiBox-root css-axw7ok"
                        >
                          <img
                            alt="ETH"
                            class="image"
                            height="26"
                            loading="lazy"
                            referrerpolicy="no-referrer"
                            src="/images/common/token-placeholder.svg"
                          />
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
                          >
                            ETH
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            data-testid="token-amount"
                          >
                            0
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-111k8jw-MuiTypography-root"
                      >
                        Parameters
                      </p>
                      <div
                        class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                          >
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            >
                              owner
                            </span>
                             
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-fw8ds0-MuiTypography-root"
                            >
                              address
                            </span>
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <div
                            class="container"
                          >
                            <div
                              class="MuiBox-root css-1lchl8k"
                            >
                              <div
                                class="MuiBox-root css-171onha"
                                title="MetaMultiSigWallet"
                              >
                                <div
                                  class="MuiBox-root css-1o4wo1x"
                                >
                                  MetaMultiSigWallet
                                </div>
                              </div>
                              <div
                                class="addressContainer"
                              >
                                <div
                                  class="MuiBox-root css-b5p5gz"
                                >
                                  <span
                                    aria-label="Copy to clipboard"
                                    class=""
                                    data-mui-internal-clone-element="true"
                                    style="cursor: pointer;"
                                  >
                                    <span>
                                      0xd8dA...6045
                                    </span>
                                  </span>
                                </div>
                                <span
                                  aria-label="Copy to clipboard"
                                  class=""
                                  data-mui-internal-clone-element="true"
                                  style="cursor: pointer;"
                                >
                                  <button
                                    aria-label="Copy to clipboard"
                                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                    tabindex="0"
                                    type="button"
                                  >
                                    <mock-icon
                                      aria-hidden=""
                                      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                      data-testid="copy-btn-icon"
                                      focusable="false"
                                    />
                                  </button>
                                </span>
                                <div
                                  class="MuiBox-root css-yjghm1"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                          >
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            >
                              _threshold
                            </span>
                             
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-fw8ds0-MuiTypography-root"
                            >
                              uint256
                            </span>
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mxvcov-MuiTypography-root"
                          >
                            1
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root css-kz5wc9"
                  />
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        safeTxGas:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="MuiBox-root css-rurw5h"
                      >
                        0
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        baseGas:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      [object Object]
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        refundReceiver:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="container"
                      >
                        <div
                          class="MuiBox-root css-1lchl8k"
                        >
                          <div
                            class="addressContainer"
                          >
                            <div
                              class="MuiBox-root css-b5p5gz"
                            >
                              <span
                                aria-label="Copy to clipboard"
                                class=""
                                data-mui-internal-clone-element="true"
                                style="cursor: pointer;"
                              >
                                <span>
                                  0x7996...aC52
                                </span>
                              </span>
                            </div>
                            <span
                              aria-label="Copy to clipboard"
                              class=""
                              data-mui-internal-clone-element="true"
                              style="cursor: pointer;"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                tabindex="0"
                                type="button"
                              >
                                <mock-icon
                                  aria-hidden=""
                                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                  data-testid="copy-btn-icon"
                                  focusable="false"
                                />
                              </button>
                            </span>
                            <div
                              class="MuiBox-root css-yjghm1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        Raw data:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="MuiBox-root css-70qvj9"
                        data-testid="tx-data-row"
                      >
                        <div>
                          0
                           bytes
                        </div>
                        <span
                          aria-label="Copy to clipboard"
                          class=""
                          data-mui-internal-clone-element="true"
                          style="cursor: pointer;"
                        >
                          <button
                            aria-label="Copy to clipboard"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <mock-icon
                              aria-hidden=""
                              class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                              data-testid="copy-btn-icon"
                              focusable="false"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmationView should display a confirmation with method call when the transaction type is not found in the ConfirmationView's mapper 1`] = `
<div>
  <div
    class="MuiStack-root css-1sazv7p-MuiStack-root"
  >
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1gdgqta-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none;"
      >
        <h3
          class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
        >
          <button
            aria-expanded="false"
            class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-10sjung-MuiButtonBase-root-MuiAccordionSummary-root"
            data-testid="decoded-tx-summary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-1r0e0ir-MuiAccordionSummary-content"
            >
              Advanced details
              <span
                class=""
                data-mui-internal-clone-element="true"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-17ibv3e-MuiSvgIcon-root"
                  focusable="false"
                />
              </span>
              <div
                class="MuiBox-root css-i9gxme"
              />
              addOwnerWithThreshold
            </span>
            <span
              class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </span>
          </button>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-w74p4c-MuiAccordionDetails-root"
                  data-testid="decoded-tx-details"
                >
                  <div
                    class="MuiStack-root css-1sazv7p-MuiStack-root"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body1 css-13ch7tx-MuiTypography-root"
                    >
                      Call
                      <code
                        class="MuiTypography-root MuiTypography-body2 css-1vdua93-MuiTypography-root"
                      >
                        addOwnerWithThreshold
                      </code>
                       
                      on
                      <div
                        class="container"
                      >
                        <div
                          class="avatarContainer"
                          style="width: 24px; height: 24px;"
                        >
                          <div
                            class="icon"
                            style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMjE4IDk2JSA0OSUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgzMDQgNTclIDEzJSkiIGQ9Ik0xLDBoMXYxaC0xek02LDBoMXYxaC0xek0zLDBoMXYxaC0xek00LDBoMXYxaC0xek0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0yLDFoMXYxaC0xek01LDFoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0yLDNoMXYxaC0xek01LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0yLDRoMXYxaC0xek01LDRoMXYxaC0xek0zLDRoMXYxaC0xek00LDRoMXYxaC0xek0wLDVoMXYxaC0xek03LDVoMXYxaC0xek0zLDVoMXYxaC0xek00LDVoMXYxaC0xek0xLDZoMXYxaC0xek02LDZoMXYxaC0xek0zLDZoMXYxaC0xek00LDZoMXYxaC0xek0xLDdoMXYxaC0xek02LDdoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCgyNjMgODQlIDQyJSkiIGQ9Ik0zLDNoMXYxaC0xek00LDNoMXYxaC0xek0wLDRoMXYxaC0xek03LDRoMXYxaC0xek0xLDVoMXYxaC0xek02LDVoMXYxaC0xeiIvPjwvc3ZnPg==); width: 24px; height: 24px;"
                          />
                        </div>
                        <div
                          class="inline MuiBox-root css-1lchl8k"
                        >
                          <div
                            class="addressContainer inline"
                          >
                            <div
                              class="MuiBox-root css-b5p5gz"
                            >
                              <span
                                aria-label="Copy to clipboard"
                                class=""
                                data-mui-internal-clone-element="true"
                                style="cursor: pointer;"
                              >
                                <span>
                                  0xDa5e...EE6b
                                </span>
                              </span>
                            </div>
                            <span
                              aria-label="Copy to clipboard"
                              class=""
                              data-mui-internal-clone-element="true"
                              style="cursor: pointer;"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                tabindex="0"
                                type="button"
                              >
                                <mock-icon
                                  aria-hidden=""
                                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                  data-testid="copy-btn-icon"
                                  focusable="false"
                                />
                              </button>
                            </span>
                            <div
                              class="MuiBox-root css-yjghm1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root css-kz5wc9"
                    />
                    <div
                      class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                        data-testid="tx-row-title"
                        style="word-break: break-word;"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                        >
                          Value:
                        </p>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                        data-testid="tx-data-row"
                      >
                        <div
                          class="MuiBox-root css-axw7ok"
                        >
                          <img
                            alt="ETH"
                            class="image"
                            height="26"
                            loading="lazy"
                            referrerpolicy="no-referrer"
                            src="/images/common/token-placeholder.svg"
                          />
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-w5uidf-MuiTypography-root"
                          >
                            ETH
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            data-testid="token-amount"
                          >
                            0
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root css-0"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-111k8jw-MuiTypography-root"
                      >
                        Parameters
                      </p>
                      <div
                        class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                          >
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            >
                              owner
                            </span>
                             
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-fw8ds0-MuiTypography-root"
                            >
                              address
                            </span>
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <div
                            class="container"
                          >
                            <div
                              class="MuiBox-root css-1lchl8k"
                            >
                              <div
                                class="MuiBox-root css-171onha"
                                title="MetaMultiSigWallet"
                              >
                                <div
                                  class="MuiBox-root css-1o4wo1x"
                                >
                                  MetaMultiSigWallet
                                </div>
                              </div>
                              <div
                                class="addressContainer"
                              >
                                <div
                                  class="MuiBox-root css-b5p5gz"
                                >
                                  <span
                                    aria-label="Copy to clipboard"
                                    class=""
                                    data-mui-internal-clone-element="true"
                                    style="cursor: pointer;"
                                  >
                                    <span>
                                      0xd8dA...6045
                                    </span>
                                  </span>
                                </div>
                                <span
                                  aria-label="Copy to clipboard"
                                  class=""
                                  data-mui-internal-clone-element="true"
                                  style="cursor: pointer;"
                                >
                                  <button
                                    aria-label="Copy to clipboard"
                                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                    tabindex="0"
                                    type="button"
                                  >
                                    <mock-icon
                                      aria-hidden=""
                                      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                      data-testid="copy-btn-icon"
                                      focusable="false"
                                    />
                                  </button>
                                </span>
                                <div
                                  class="MuiBox-root css-yjghm1"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                      >
                        <div
                          class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                          data-testid="tx-row-title"
                          style="word-break: break-word;"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                          >
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
                            >
                              _threshold
                            </span>
                             
                            <span
                              class="MuiTypography-root MuiTypography-body1 css-fw8ds0-MuiTypography-root"
                            >
                              uint256
                            </span>
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                          data-testid="tx-data-row"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mxvcov-MuiTypography-root"
                          >
                            1
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root css-kz5wc9"
                  />
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        safeTxGas:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="MuiBox-root css-rurw5h"
                      >
                        0
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        baseGas:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      [object Object]
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        refundReceiver:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="container"
                      >
                        <div
                          class="MuiBox-root css-1lchl8k"
                        >
                          <div
                            class="addressContainer"
                          >
                            <div
                              class="MuiBox-root css-b5p5gz"
                            >
                              <span
                                aria-label="Copy to clipboard"
                                class=""
                                data-mui-internal-clone-element="true"
                                style="cursor: pointer;"
                              >
                                <span>
                                  0x7996...aC52
                                </span>
                              </span>
                            </div>
                            <span
                              aria-label="Copy to clipboard"
                              class=""
                              data-mui-internal-clone-element="true"
                              style="cursor: pointer;"
                            >
                              <button
                                aria-label="Copy to clipboard"
                                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                tabindex="0"
                                type="button"
                              >
                                <mock-icon
                                  aria-hidden=""
                                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                  data-testid="copy-btn-icon"
                                  focusable="false"
                                />
                              </button>
                            </span>
                            <div
                              class="MuiBox-root css-yjghm1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container css-86qz5o-MuiGrid-root"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item css-1wehkfy-MuiGrid-root"
                      data-testid="tx-row-title"
                      style="word-break: break-word;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                      >
                        Raw data:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                      data-testid="tx-data-row"
                    >
                      <div
                        class="MuiBox-root css-70qvj9"
                        data-testid="tx-data-row"
                      >
                        <div>
                          0
                           bytes
                        </div>
                        <span
                          aria-label="Copy to clipboard"
                          class=""
                          data-mui-internal-clone-element="true"
                          style="cursor: pointer;"
                        >
                          <button
                            aria-label="Copy to clipboard"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <mock-icon
                              aria-hidden=""
                              class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                              data-testid="copy-btn-icon"
                              focusable="false"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
